# ai-agent-templates

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
templates/content-marketing/: README.md  pyproject.toml  setup.ps1  setup.sh
templates/customer-support/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh
templates/data-pipeline-monitor/: .env.example  README.md  pyproject.toml  setup.ps1  setup.sh
templates/ecommerce-assistant/: .env.example  README.md  pyproject.toml  setup.ps1  setup.sh
templates/hr-onboarding/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh
templates/it-helpdesk/: README.md  pyproject.toml  setup.ps1  setup.sh
templates/legal-document-analyzer/: .env.example  README.md  pyproject.toml  setup.ps1  setup.sh
templates/legal-document-analyzer/src/legal_document_analyzer/: __init__.py  __main__.py  crew.py  main.py
templates/legal-document-analyzer/src/legal_document_analyzer/config/: agents.yaml  tasks.yaml
templates/legal-document-analyzer/src/legal_document_analyzer/knowledge/: nda_template.md  software_license.md
templates/legal-document-analyzer/src/legal_document_analyzer/tools/: __init__.py  custom_tool.py
templates/legal-document-analyzer/tests/: test_crew.py
templates/sales-lead-qualifier/: .env.example  README.md  pyproject.toml  setup.ps1  setup.sh
templates/sales-lead-qualifier/src/sales_lead_qualifier/: __init__.py  __main__.py  crew.py  main.py
templates/sales-lead-qualifier/src/sales_lead_qualifier/config/: agents.yaml  tasks.yaml
templates/sales-lead-qualifier/src/sales_lead_qualifier/knowledge/: lead_database.md
templates/sales-lead-qualifier/src/sales_lead_qualifier/tools/: __init__.py  custom_tool.py
templates/sales-lead-qualifier/tests/: test_crew.py
(+73 files in other folders)
